objects/Case.object
<CustomObject>
    <fields>
        <fullName>Difficulty__c</fullName>
        <label>Difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1. Trivial (&lt;1/2 hour)</fullName>
                </value>
                <value>
                    <fullName>2. Simple (1/2 - 1 hour)</fullName>
                </value>
                <value>
                    <fullName>3. Easy (1-4 Hours)</fullName>
                </value>
                <value>
                    <fullName>4. Typical (4-8 hours)</fullName>
                </value>
                <value>
                    <fullName>5. Hard (1-3 days)</fullName>
                </value>
                <value>
                    <fullName>6. Difficult (3-7 days)</fullName>
                </value>
                <value>
                    <fullName>7. Complex (7-14 days)</fullName>
                </value>
                <value>
                    <fullName>8. Protracted (&gt; 14 days)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DuplicateEmailtoCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked, if case is created by Email to Case functionality and will be checked by CaseDuplicateEmailtoCase  trigger.</description>
        <label>DuplicateEmailtoCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDA_Tool__c</fullName>
        <label>EDA Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apache Redhawk</fullName>
                </value>
                <value>
                    <fullName>Apache Totem</fullName>
                </value>
                <value>
                    <fullName>Bit Cell Kit</fullName>
                </value>
                <value>
                    <fullName>Cadence Library</fullName>
                </value>
                <value>
                    <fullName>CadenceLib/schematics</fullName>
                </value>
                <value>
                    <fullName>CadenceLib/techfiles</fullName>
                </value>
                <value>
                    <fullName>DFM</fullName>
                </value>
                <value>
                    <fullName>DRC</fullName>
                </value>
                <value>
                    <fullName>Design Manual</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>ERC</fullName>
                </value>
                <value>
                    <fullName>Fill_Gen</fullName>
                </value>
                <value>
                    <fullName>GDRM</fullName>
                </value>
                <value>
                    <fullName>LPE/Calibre-xRC</fullName>
                </value>
                <value>
                    <fullName>LPE/QRC</fullName>
                </value>
                <value>
                    <fullName>LOP/StarRCXT</fullName>
                </value>
                <value>
                    <fullName>Parasitic Extraction</fullName>
                </value>
                <value>
                    <fullName>LVS</fullName>
                </value>
                <value>
                    <fullName>LVS/Hercules</fullName>
                </value>
                <value>
                    <fullName>Layer database</fullName>
                </value>
                <value>
                    <fullName>Milkyway Tech Files</fullName>
                </value>
                <value>
                    <fullName>Models</fullName>
                </value>
                <value>
                    <fullName>PDK release</fullName>
                </value>
                <value>
                    <fullName>QA/Cadence/Lib</fullName>
                </value>
                <value>
                    <fullName>QA/DRC</fullName>
                </value>
                <value>
                    <fullName>QA/ERC</fullName>
                </value>
                <value>
                    <fullName>QA/LPE</fullName>
                </value>
                <value>
                    <fullName>QA/LVS</fullName>
                </value>
                <value>
                    <fullName>CFILL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDA_Tool_verions__c</fullName>
        <label>EDA Tool Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESDLUP_Fab1_8__c</fullName>
        <formula>IF(ISBLANK(TEXT( Geometry__c )) ,False, CONTAINS(&quot;0.012UM;0.020UM;0.022UM;0.028UM&quot;, TEXT(Geometry__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESDLUP_Fab1&amp;8</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESDLUP_Fab8__c</fullName>
        <formula>IF(ISBLANK(TEXT( Geometry__c )) ,False, CONTAINS(&quot;0.007UM;0.010UM;0.014UM&quot;, TEXT(Geometry__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESDLUP_Fab8</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESDLUP_SGP__c</fullName>
        <formula>IF(ISBLANK(TEXT( Geometry__c )) ,False, CONTAINS(&quot;0.035UM;0.040UM;0.055UM;0.060UM;0.065UM;0.11UM;0.13UM;0.150UM;0.152UM;0.17UM;0.18UM&quot;, TEXT(Geometry__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESDLUP_SGP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Management</label>
        <referenceTo>Escalation_Complaint__c</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimation_of_Effort__c</fullName>
        <description>Estimation of effort in number of hours.</description>
        <inlineHelpText>Estimation of Effort in number of hours.</inlineHelpText>
        <label>Estimation of Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <description>Expected Close Date of the case</description>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <label>FAB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fab 1</fullName>
                </value>
                <value>
                    <fullName>Fab 2</fullName>
                </value>
                <value>
                    <fullName>Fab 235</fullName>
                </value>
                <value>
                    <fullName>Fab 3</fullName>
                </value>
                <value>
                    <fullName>Fab 3E</fullName>
                </value>
                <value>
                    <fullName>Fab 5</fullName>
                </value>
                <value>
                    <fullName>Fab 6</fullName>
                </value>
                <value>
                    <fullName>Fab 7</fullName>
                </value>
                <value>
                    <fullName>Fab 8</fullName>
                </value>
                <value>
                    <fullName>Fab 9</fullName>
                </value>
                <value>
                    <fullName>Fab 10</fullName>
                </value>
                <value>
                    <fullName>Altis</fullName>
                </value>
                <value>
                    <fullName>Fab 11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAE_Territory1__c</fullName>
        <formula>TEXT( Account.FE_Territory__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAE Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab9_10__c</fullName>
        <formula>IF(ISBLANK(TEXT(Target_process_node__c)) ,False, CONTAINS(&quot;SiGe 5PAe;SiGe 5PAx;SiGe 5PA4;CSOI 7RF;CSOI 7SW;SiGe 7WL;SiGe 7PA;45RFSOI;130RF-SOI;SIPH 9WG;45SPCLO;CMOS 7RF;CMOS 7HV;SiGe 8WL;SiGe 8HP;SiGe 8XP;130SG03;CMOS 8RF;SiGe 9HP;SiGe 8HP/8XP;CMOS 9FLP/RF;CMOS 10LPe;CSOI 12S0;CSOI 32;CSOI 8SW&quot;, TEXT(Target_process_node__c )))</formula>
        <label>Fab9&amp;10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feed_Comment__c</fullName>
        <label>Feed Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_FeedComment__c</fullName>
        <description>FeedComment while uploading attachment</description>
        <label>File FeedComment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Response_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Response By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FirstResponse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fix_Availability__c</fullName>
        <description>The environment where the fix has been deployed for testing and  validation</description>
        <inlineHelpText>The environment where the fix has been deployed for testing and  validation</inlineHelpText>
        <label>Fix Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UAT</fullName>
                    <color>#0B6FCE</color>
                    <label>UAT</label>
                </value>
                <value>
                    <fullName>HOTFIX</fullName>
                    <color>#78C953</color>
                    <label>HOTFIX</label>
                </value>
                <value>
                    <fullName>PROD</fullName>
                    <color>#E27001</color>
                    <label>PROD</label>
                </value>
                <value>
                    <fullName>other</fullName>
                    <color>#A845DC</color>
                    <label>other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GF_Product_mask_Name__c</fullName>
        <label>GF Product/mask Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0.003UM</fullName>
                </value>
                <value>
                    <fullName>0.007UM</fullName>
                </value>
                <value>
                    <fullName>0.010UM</fullName>
                </value>
                <value>
                    <fullName>0.012UM</fullName>
                </value>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.020UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.032UM</fullName>
                </value>
                <value>
                    <fullName>0.040UM</fullName>
                </value>
                <value>
                    <fullName>0.045UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.060UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.086UM</fullName>
                </value>
                <value>
                    <fullName>0.09UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.14UM</fullName>
                </value>
                <value>
                    <fullName>0.152UM</fullName>
                </value>
                <value>
                    <fullName>0.153UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.16UM</fullName>
                </value>
                <value>
                    <fullName>0.17UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.20UM</fullName>
                </value>
                <value>
                    <fullName>0.22UM</fullName>
                </value>
                <value>
                    <fullName>0.25UM</fullName>
                </value>
                <value>
                    <fullName>0.30UM</fullName>
                </value>
                <value>
                    <fullName>0.32UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GroupOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Justification__c</fullName>
        <label>Hold Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ITAR_Created_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITAR Created Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impacted_Rules__c</fullName>
        <label>Impacted Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Engagement_Phase__c</fullName>
        <label>Internal Engagement Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_or_external__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Use Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InvestigatedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Date__c</fullName>
        <label>Investigation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Investigation_Results__c</fullName>
        <label>Investigation Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Invoice_number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAssignmentProcess__c</fullName>
        <formula>IF( 
   AND(
			OR(
				AND( TEXT(CreatedBy.UserType)=&apos;PowerCustomerSuccess&apos;, TEXT(Owner:User.UserType)=&apos;PowerCustomerSuccess&apos;),
				TRIM(LEFT(OwnerId, 3))=&apos;00G&apos;
			),
   NULLVALUE(AutoAssignmentCount__c,0)  &lt; 1.00,

Age_of_Case__c  &lt; 0.01
   )
   
   ,true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAssignmentProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked, if case is created by Customer Portal Users and will be unchecked by Workflow.</description>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Assignee_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Assignee Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Customer_Affected__c</fullName>
        <label>Is Customer Affected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Urgent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Encountered_By__c</fullName>
        <description>When the case is created by customer (via email2case/GFV/Web to case) the value is populated as Customer. When GLOBALFOUNDRIES user creates a case he\she can choose one of the values.</description>
        <inlineHelpText>Mandatory if Category is Tapeout (Swift).</inlineHelpText>
        <label>Issue Encountered By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>GLOBALFOUNDRIES Staff (Frontend)</fullName>
                </value>
                <value>
                    <fullName>GLOBALFOUNDRIES Staff (Operations)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Not_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Not Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2L3RoutingExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L2L3RoutingExecuted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2Logic1__c</fullName>
        <formula>IF(ISBLANK(TEXT(Target_process_node__c)) ,False,CONTAINS(&quot;14LPP&quot;, TEXT(Target_process_node__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2Logic1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastCaseCommentId__c</fullName>
        <label>LastCaseCommentId</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCaseFeedCommentId__c</fullName>
        <label>LastCaseFeedCommentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCaseFeedFileLink__c</fullName>
        <formula>IF(BEGINS(Last_Attachment_Id__c , &apos;00P&apos;),
(&quot;Customer View : &quot; + $Label.Case_Globalfoundry_Link+Last_Feed_Attachment_URL__c+ &quot; &quot; + BR() + &quot; &quot; + BR() + &quot; GLOBALFOUNDRIES Internal View : &quot; + $Label.Case_Link_for_Internal_User+Last_Feed_Attachment_URL__c),
(&quot;Customer View : &quot; + $Label.Case_Globalfoundry_Link+Last_Feed_Attachment_URL__c+ &quot; &quot; + BR() + &quot; &quot; + BR() + &quot; GLOBALFOUNDRIES Internal View: &quot; + $Label.Case_Link_for_Internal_User+Last_Feed_Attachment_URL__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastCaseFeedFileLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCaseFeedPortalFileLink__c</fullName>
        <formula>$Label.Case_Globalfoundry_Link+Last_Feed_Attachment_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastCaseFeedPortalFileLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCaseFileLink__c</fullName>
        <formula>IF(BEGINS(Last_Attachment_Id__c , &apos;00P&apos;), 
(&quot;Customer User Only : &quot; + $Label.Case_Globalfoundry_Link+Last_Attachment_URL__c+ &quot; &quot; + BR() + &quot; &quot; + BR() + &quot; GF User Only : &quot; + $Label.Case_Link_for_Internal_User+Last_Attachment_URL__c),
(&quot;Customer User Only : &quot; + $Label.Case_Globalfoundry_Link+Last_Attachment_URL__c+ &quot; &quot; + BR() + &quot; &quot; + BR() + &quot; GF User Only : &quot; + $Label.Case_Link_for_Internal_User+Last_Attachment_URL__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastCaseFileLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCasePortalFileLink__c</fullName>
        <formula>$Label.Case_Globalfoundry_Link+Last_Attachment_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastCasePortalFileLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStatusChangeTime__c</fullName>
        <label>LastStatusChangeTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_Date__c</fullName>
        <label>Last Attachment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_Description__c</fullName>
        <label>Last Attachment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_File_Name__c</fullName>
        <label>Last Attachment File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_Id__c</fullName>
        <label>Last Attachment Id</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Attachment IsPrivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_Size__c</fullName>
        <label>Last Attachment Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_URL__c</fullName>
        <label>Last Attachment URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_Uploaded__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Attachment Uploaded</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comments__c</fullName>
        <label>Last Case Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Comment_Date__c</fullName>
        <label>Last Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Comment_IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Comment IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_FeedAttachment_FileName__c</fullName>
        <label>Last FeedAttachment FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_FeedAttachment_Id__c</fullName>
        <label>Last FeedAttachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_FeedAttachment_IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last FeedAttachment IsPrivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_FeedComment_IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last FeedComment IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Feed_Attachment_URL__c</fullName>
        <label>Last Feed Attachment URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_URL__c</fullName>
        <label>Legacy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Library_Release__c</fullName>
        <label>Library Release</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technology__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0.0</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>2.6</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>rel1.0</fullName>
                </value>
                <value>
                    <fullName>rel2.0</fullName>
                </value>
                <value>
                    <fullName>rel2.5</fullName>
                </value>
                <value>
                    <fullName>rel3.0</fullName>
                </value>
                <value>
                    <fullName>rel4.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_ID__c</fullName>
        <label>Lot ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_PDK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master PDK</label>
        <referenceTo>PDK__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Acknowledged__c</fullName>
        <formula>IF( AND( ISPICKVAL( Status, &quot;New&quot;)),&quot;Warning: Please change the status to Acknowledged-In Queue to avoid Escalation.&quot;,&quot;&quot;)</formula>
        <label>Message Acknowledged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Project_Validation__c</fullName>
        <formula>IF( AND(  IsClosed =FALSE, ISPICKVAL( Category__c , &quot;Design Enablement-PDK&quot;)  , ISBLANK( Project__c ) = TRUE,  CreatedById == $User.Id ),&quot;Warning: Project is not selected, please choose project name.&quot;,&quot;&quot;)</formula>
        <label>Message Project Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Reopen__c</fullName>
        <formula>IF( AND( NOT(ISPICKVAL(  Reopen_Request_Status__c , &quot;Submitted&quot;)) , IsClosed =TRUE , CreatedById == $User.Id ),&quot;If you feel that the case was closed prematurely, please request to reopen the case.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Message Reopen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <formula>IF( AND(Internal_or_external__c= FALSE, OR(CCtoCaseCount__c &gt; 0,ISBLANK(ContactId)  = FALSE)),&quot;Warning: This case is visible to customer in the customer portal, make sure you direct your Chatter and Comments appropriately!&quot;,&quot;&quot;)</formula>
        <label>Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Stack__c</fullName>
        <label>Metal Stack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinutesNotInWaitStatus__c</fullName>
        <description>This field is updated by workflow to store minutes case is in status which is to be included in age of case.</description>
        <label>MinutesNotInWaitStatus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_by_Date__c</fullName>
        <description>User&apos;s request as to when the case needs to be closed.</description>
        <inlineHelpText>Provide the date when case resolution must be resolved.</inlineHelpText>
        <label>Need by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnHold_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OnHold By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_OnHold</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountThirdParty__c</valueField>
            </filterItems>
            <infoMessage>Depends on Account Name or Account (Third Party).</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Record_Created_Date__c</fullName>
        <label>Original Record Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Originator_Closure_Review_Date__c</fullName>
        <label>Originator_Closure_Review_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OutofOfficeOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OutofOffice Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerQueueName__c</fullName>
        <formula>Owner:Queue.QueueName</formula>
        <label>Owner QueueName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_API_Name__c</fullName>
        <description>This field will be used in List Views, If Owner is User it will return User Alias and for Queues Queue API Name.</description>
        <formula>IF(LEFT(OwnerId, 3) = &quot;005&quot;, Owner:User.Alias  ,  Owner:Queue.DeveloperName )</formula>
        <label>Owner API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_IsActive__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnershipType__c</fullName>
        <description>This Field is used to get the Case Owner Id .</description>
        <formula>IF(LEFT(OwnerId, 3) = &quot;005&quot;, &quot;User&quot;, &quot;Queue&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Transfer_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ownership Transfer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDK_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PDK Bundle</label>
        <referenceTo>Sub_PDK__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDK_Name__c</fullName>
        <label>PDK Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_VERSION__c</fullName>
        <label>PDK Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>